--- a/mobile/src/main/res/layout/activity_connect_hrm.xml
+++ b/mobile/src/main/res/layout/activity_connect_hrm.xml
@@ -1,28 +1,27 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<!--
-This software is subject to the license described in the License.txt file 
-included with this software distribution. You may not use this file except in compliance 
-with this license.
-
-Copyright (c) Dynastream Innovations Inc. 2013
-All rights reserved.
--->
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:layout_width="fill_parent"
-    android:layout_height="fill_parent"
-    android:orientation="vertical" >
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
+    android:layout_width="match_parent"
+    android:layout_height="match_parent"
+    android:orientation="vertical"
+    tools:context=".ConnectHrmActivity">
 
     <LinearLayout
+        android:id="@+id/status_container"
         android:layout_width="fill_parent"
         android:layout_height="wrap_content"
-        android:paddingHorizontal="16dp">
+        android:paddingHorizontal="16dp"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent">
 
         <LinearLayout
             android:layout_width="fill_parent"
             android:layout_height="wrap_content"
-            android:orientation="vertical"
             android:layout_gravity="center_vertical"
-            android:layout_weight="2">
+            android:layout_weight="2"
+            android:orientation="vertical">
 
             <TextView
                 android:id="@+id/connect_status_text"
@@ -47,13 +46,13 @@ All rights reserved.
             style="?android:attr/progressBarStyleLarge"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginBottom="5dp"
             android:layout_marginStart="5dp"
             android:layout_marginTop="5dp"
+            android:layout_marginBottom="5dp"
             android:layout_weight="1" />
 
-     </LinearLayout>
-    
+    </LinearLayout>
+
     <TextView
         android:id="@+id/devices_acquainted_title"
         android:layout_width="wrap_content"
@@ -66,14 +65,14 @@ All rights reserved.
         android:id="@+id/devices_acquainted_list"
         android:layout_width="fill_parent"
         android:layout_height="wrap_content"
-        android:visibility="gone" >
-    </ListView>
+        android:visibility="gone" />
 
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="Hello world"
         android:textColor="@color/white" />
+
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
@@ -90,7 +89,6 @@ All rights reserved.
     <ListView
         android:id="@+id/devices_found_new_list"
         android:layout_width="fill_parent"
-        android:layout_height="wrap_content" >
-    </ListView>
+        android:layout_height="wrap_content" />
 
 </LinearLayout>
