--- a/mobile/src/main/res/layout/activity_connect_hrm.xml
+++ b/mobile/src/main/res/layout/activity_connect_hrm.xml
@@ -59,6 +59,7 @@
         android:layout_height="wrap_content"
         android:text="@string/devices_acquainted"
         android:textStyle="bold"
+        android:paddingHorizontal="16dp"
         android:visibility="gone" />
 
     <ListView
@@ -68,23 +69,12 @@
         android:visibility="gone" />
 
     <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="Hello world"
-        android:textColor="@color/white" />
-
-    <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="Hello world"
-        android:textColor="@color/black" />
-
-    <TextView
         android:id="@+id/devices_found_new_title"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="@string/devices_found_new"
-        android:textStyle="bold" />
+        android:textStyle="bold"
+        android:paddingHorizontal="16dp" />
 
     <ListView
         android:id="@+id/devices_found_new_list"
